--- a/index.html
+++ b/index.html
@@ -6,136 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/style.css" media="all">
+  <link rel="stylesheet" href="style.css" media="all">
   <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <style>
-    @charset "utf-8";
-
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      position: relative;
-      width: 700px;
-      margin: 30px auto;
-      padding: 4% 8%;
-      background-color: #89D2BA;
-      border: 3px solid #EDD29F;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(255, 14, 14, 0.5) inset;
-    }
-
-    .thum_icon {
-      position: absolute;
-      transform: rotate(15deg);
-      margin-left: 10px;
-      font-size: 30px;
-      opacity: 0.5;
-    }
-
-    h1 {
-      color: #1F6866;
-      font-family: 'Otomanopee One', sans-serif;
-      font-size: 40px;
-      text-align: center;
-      padding: 5px;
-    }
-
-    .add_text {
-      width: 640px;
-      border: none;
-      border-bottom: 3px solid #EDD29F;
-      background-color: #89D2BA;
-      padding: 5px 10px;
-      font-size: 18px;
-    }
-
-    .add {
-      display: flex;
-      justify-content: space-between;
-      padding: 5px;
-      margin-bottom: 16px;
-    }
-
-    .add_icon {
-      display: inline-block;
-      padding: 5px;
-      font-size: 25px;
-      margin-left: 3px;
-      opacity: 0.5;
-    }
-
-    .wait_icon,
-    .done_icon {
-      display: flex;
-      padding: 5px;
-      font-size: 25px;
-      margin-left: 3px;
-      opacity: 0.6;
-    }
-
-    .add_icon:hover,
-    .edit_icon:hover,
-    .del_icon:hover,
-    .check_icon:hover {
-      opacity: 0.4;
-    }
-
-    .wait,
-    .done {
-      border: 3px solid #EDD29F;
-      padding: 10px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-
-    .wait_item,
-    .done_item {
-      display: flex;
-      background-color: #cdf5e8;
-      border: none;
-      border-radius: 6px;
-      margin: 5px 0;
-    }
-
-    .wait_text,
-    .done_text {
-      background-color: transparent;
-      border: none;
-      width: 100%;
-      margin: 5px;
-      font-size: 18px;
-      padding-left: 5px;
-    }
-
-    h3 {
-      padding: 5px;
-      font-size: 20px;
-      font-family: 'Noto Sans TC';
-      color: #1F6866;
-    }
-
-    .edit_icon,
-    .del_icon,
-    .check_icon {
-      margin: 0 5px;
-    }
-
-    @media screen and (max-width:760px) {
-      h1 {
-        font-size: 28px;
-      }
-
-      .container {
-        width: auto;
-      }
-    }
-  </style>
+ 
 </head>
 
 <body>
@@ -186,143 +62,7 @@
       </div>
     </div>
   </div>
-  <script src="/main.js" charset="utf-8"></script>
-  <script>
-    var addevent = document.getElementsByClassName("add_icon")[0];
-    var txt = document.getElementsByClassName("add_text")[0];
-    var wait = document.getElementsByClassName("wait")[0];
-    var done = document.getElementsByClassName("done")[0];
-    var _focus = document.getElementsByClassName("add_text")[0];
-
-
-    addevent.onclick = function () {
-      var addcontent = txt.value.trim();
-      if (txt.value == "") {
-        alert("請輸入待辦事項")
-      }
-      else {
-        addWaitItem(addcontent);
-        txt.value = "";
-        _focus.focus();
-      }
-    }
-
-    // txt.addEventListener("keyup", function (event) {
-    //   var addcontent = txt.value.trim();
-    //   // Number 13 is the "Enter" key on the keyboard
-    //   if (event.keyCode === 13 && txt.value == "") {
-    //     alert("請輸入待辦事項");
-    //   }
-    //   else if (event.keyCode === 13 && txt.value !== ""){
-    //     addWaitItem(addcontent);
-    //     txt.value = "";
-    //     _focus.focus();
-    //   }
-    // });
-
-    function addWaitItem(content) {
-      // 建立節點
-      var waitItem = document.createElement("div");
-      var waitText = document.createElement("input");
-      var waitIcon = document.createElement("div");
-      var editicon = document.createElement("div");
-      var delIcon = document.createElement("div");
-      var checkIcon = document.createElement("div");
-      // 添加class
-      waitItem.className = "wait_item";
-      waitText.className = "wait_text";
-      waitIcon.className = "wait_icon";
-      editicon.className = "edit_icon";
-      delIcon.className = "del_icon";
-      checkIcon.className = "check_icon";
-      // waitText增加disabled
-      waitText.disabled = true;
-      // waitText內容
-      waitText.setAttribute("value", content);
-      // 加入icon
-      editicon.innerHTML = "<i class=" + '"fas fa-pencil-alt"' + "></i>";
-      delIcon.innerHTML = "<i class=" + '"fas fa-trash-alt"' + "></i>";
-      checkIcon.innerHTML = "<i class=" + '"far fa-check-circle"' + "></i>";
-      // 插入元素
-      waitIcon.appendChild(editicon);
-      waitIcon.appendChild(delIcon);
-      waitIcon.appendChild(checkIcon);
-      waitItem.appendChild(waitText);
-      waitItem.appendChild(waitIcon);
-      // 插入頁面
-      wait.appendChild(waitItem);
-
-      // edit方法
-      editicon.onclick = function () {
-        if (waitText.disabled == true) {
-          waitText.disabled = false;
-          waitText.focus();
-          // 設置焦點位置
-          waitText.selectionStart = waitText.value.length;
-        }
-        else {
-          waitText.setAttribute("value", waitText.value);
-          waitText.disabled = true;
-          _focus.focus();
-        }
-      }
-
-      // delet方法
-      delIcon.onclick = function () {
-        waitItem.parentNode.removeChild(waitItem);
-        _focus.focus();
-      }
-
-      // check 方法
-      checkIcon.onclick = function () {
-        addDoneItem(waitText.value);
-        waitItem.parentNode.removeChild(waitItem);
-        _focus.focus();
-      }
-    }
-
-    function addDoneItem(doneContent) {
-      var doneItem = document.createElement("div");
-      var doneText = document.createElement("input");
-      var doneIcon = document.createElement("div");
-      var delIcon = document.createElement("div");
-      var checkIcon = document.createElement("div");
-      // 添加class
-      doneItem.className = "done_item";
-      doneText.className = "done_text";
-      doneIcon.className = "done_icon";
-      delIcon.className = "del_icon";
-      checkIcon.className = "check_icon";
-      // waitText增加disabled
-      doneText.disabled = true;
-      // waitText內容
-      doneText.setAttribute("value", doneContent);
-      // 加入icon
-      delIcon.innerHTML = "<i class=" + '"fas fa-trash-alt"' + "></i>";
-      checkIcon.innerHTML = "<i class=" + '"fa fa-check-circle"' + "></i>";
-      // 插入元素
-
-      doneIcon.appendChild(delIcon);
-      doneIcon.appendChild(checkIcon);
-      doneItem.appendChild(doneText);
-      doneItem.appendChild(doneIcon);
-      // 插入頁面
-      done.appendChild(doneItem);
-
-      // delet方法
-      delIcon.onclick = function () {
-        doneItem.parentNode.removeChild(doneItem);
-        _focus.focus();
-      }
-
-      // check 方法
-      checkIcon.onclick = function () {
-        addWaitItem(doneText.value);
-        doneItem.parentNode.removeChild(doneItem);
-        _focus.focus();
-      }
-    }
-  </script>
+  <script src="main.js" charset="utf-8"></script>
 </body>
 
 </html>
